--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -227,6 +227,7 @@
             "request": "launch",
             "program": "superpixel_disagg_model.py",
             "console": "integratedTerminal",
+            //"justMyCode": false,
             "env": {//"DISPLAY":":1",
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
@@ -241,20 +242,260 @@
                 "-adamwr", "0",
                 "-lstep", "800",
                 "--validation_fold", "0",
-                "-rs", "1613",
-                "-rsf", "1613",
+                "-rs", "1610",
+                "-rsf", "1610",
                 "-mm", "m", 
                 "--loss", "LogL1", 
-                "--kernel_size", "3,1,1,1",
+                "--kernel_size", "1,1,1,1",
                 "--admin_augment", "True",
                 //"--population_target", "True",
                 "--input_scaling", "True",
-                "--output_scaling", "True",
-                "--random_seed_folds", "1610",
+                "--output_scaling", "True", 
                 "--sampler", "custom",
                 "--max_step", "150000",
                 //"--population_target", "True"
                 "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "MOZ_CV LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "moz",
+                "-train_lvl", "f",
+                "-test", "moz",
+                "-lr", "0.00001",
+                "-wr", "0.3",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m", 
+                "--loss", "LogL1", 
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "RWA_CV LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "rwa",
+                "-train_lvl", "f",
+                "-test", "rwa",
+                "-lr", "0.0001",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m", 
+                "--loss", "LogL1", 
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "UGA_CV LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "uga",
+                "-train_lvl", "f",
+                "-test", "uga",
+                "-lr", "0.0001",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m", 
+                "--loss", "LogL1", 
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "NGA_CV LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "nga",
+                "-train_lvl", "f",
+                "-test", "nga",
+                "-lr", "0.0001",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m", 
+                "--loss", "LogL1", 
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "MOZ train_model_with_agg_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "train_model_with_agg_data.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-pre", "preprocessed_data_3_moz.pkl",
+                "-adm_rst", "../../../data/OtherBuildings/MOZ/moz_wpop_regions.tif",
+                "-out", "../dataout/wpop_moz_c_311_rs1610/",
+                "-data", "moz",
+                "-bu", "True",
+                "-e5f", "True",
+                "-train_lvl", "c",
+                "-rs", "1610"
+
+            ]
+        },{
+            "name": "RWA train_model_with_agg_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "train_model_with_agg_data.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-pre", "preprocessed_data_3_rwa.pkl",
+                "-adm_rst", "../../../data/OtherBuildings/RWA/rwa_wpop_regions.tif",
+                "-out", "../dataout/predictions/wpop_rwa_f_311_rs1614/",
+                "-data", "rwa",
+                "-bu", "True",
+                "-e5f", "True",
+                "-train_lvl", "c",
+                "-rs", "1614"
+            ]
+        },{
+            "name": "UGA train_model_with_agg_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "train_model_with_agg_data.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-pre", "preprocessed_data_3_uga.pkl",
+                "-adm_rst", "../../../data/OtherBuildings/UGA/uga_wpop_regions.tif",
+                "-out", "../dataout/wpop_uga_f_311_rs1610/",
+                "-data", "uga",
+                "-bu", "True",
+                "-e5f", "True",
+                "-train_lvl", "f",
+                "-rs", "1614"
+            ]
+        },{
+            "name": "NGA train_model_with_agg_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "train_model_with_agg_data.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-pre", "preprocessed_data_3_nga.pkl",
+                "-adm_rst", "../../../data/OtherBuildings/NGA/nga_wpop_regions.tif",
+                "-out", "../dataout/wpop_nga_f_311_rs1610/",
+                "-data", "nga",
+                "-bu", "True",
+                "-e5f", "True",
+                "-train_lvl", "c",
+                "-rs", "1612"
+            ]
+        },{
+            "name": "COD train_model_with_agg_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "train_model_with_agg_data.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-pre", "preprocessed_data_3_cod.pkl",
+                "-adm_rst", "../../../data/OtherBuildings/COD/cod_wpop_regions.tif",
+                "-out", "../dataout/wpop_cod_f_311_rs1610/",
+                "-data", "cod",
+                "-bu", "True",
+                "-e5f", "True",
+                "-train_lvl", "f",
+                "-rs", "1610"
             ]
         },
         {
