--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -522,8 +522,74 @@
                 "-rs", "1610",
                 "-rsf", "1610"
             ]
-        },
-        {
+        },{
+            "name": "Transfer to TZA",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "uga,rwa,cod,nga,moz",
+                "-train_lvl", "f,f,f,f,f",
+                "-test", "uga,rwa,nga,moz,cod",
+                "-lr", "0.000001",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "400",
+                "--validation_split", "0.2",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m,m,d,d,m",
+                "--loss", "LogL1",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--dataset_dir", "datasets", 
+                "--name", "transfer_to_tza",
+                "--full_ceval", "False"
+            ]
+        },{
+            "name": "Transfer to TZA Evaled",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,rwa,tza",
+                "-train_lvl", "f,f,f,f,f",
+                "-test", "tza",
+                "-lr", "0.000001",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "40",
+                "--validation_split", "0.2",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "d,d,d",
+                "--loss", "LogL1",
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--eval_model", "transfer_to_tza",
+                "--e5f_metric", "best_mape_avg",
+                "--dataset_dir", "datasets",
+                //"--population_target", "True"
+                "--name", "transfer_to_tza_evaled",
+                "--full_ceval", "False"
+            ]
+        },{
             "name": "MSE CV EVAL CV",
             "type": "python",
             "request": "launch",
