--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -384,7 +384,7 @@
                 "--validation_fold", "0",
                 "-rs", "1610",
                 "-rsf", "1610",
-                "-mm", "m", 
+                "-mm", "d", 
                 "--loss", "LogL1", 
                 "--kernel_size", "1,1,1,1",
                 "--admin_augment", "True",
@@ -535,13 +535,13 @@
             "args": [
                 "-train", "uga,rwa,cod,nga,moz",
                 "-train_lvl", "f,f,f,f,f",
-                "-test", "uga,rwa,nga,moz,cod",
+                "-test", "uga,rwa,nga,moz,cod,tza",
                 "-lr", "0.000001",
-                "-wr", "0.01",
-                //"--dropout", "0.4",
+                "-wr", "0.03",
+                "--dropout", "0.4",
                 "-optim", "adam",
                 "-adamwr", "0",
-                "-lstep", "40",
+                "-lstep", "1600",
                 "--validation_split", "0.2",
                 "-rs", "1610",
                 "-rsf", "1610",
@@ -564,12 +564,12 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,rwa,tza",
+                "-train", "rwa,tza",
                 "-train_lvl", "f,f,f,f,f",
                 "-test", "tza",
                 "-lr", "0.000001",
-                "-wr", "0.01",
-                //"--dropout", "0.4",
+                "-wr", "0.03",
+                "--dropout", "0.4",
                 "-optim", "adam",
                 "-adamwr", "0",
                 "-lstep", "40",
@@ -577,9 +577,7 @@
                 "-rs", "1610",
                 "-rsf", "1610",
                 "-mm", "d,d,d",
-                "--loss", "LogL1",
-                "--kernel_size", "1,1,1,1",
-                "--admin_augment", "True",
+                "--loss", "LogL1",  
                 "--input_scaling", "True",
                 "--output_scaling", "True", 
                 "--eval_model", "transfer_to_tza",
