upload new code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -537,8 +537,8 @@
                 "-train_lvl", "f,f,f,f,f",
                 "-test", "uga,rwa,nga,moz,cod,tza",
                 "-lr", "0.000001",
-                "-wr", "0.03",
-                "--dropout", "0.4",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
                 "-optim", "adam",
                 "-adamwr", "0",
                 "-lstep", "1600",
@@ -568,8 +568,73 @@
                 "-train_lvl", "f,f,f,f,f",
                 "-test", "tza",
                 "-lr", "0.000001",
-                "-wr", "0.03",
-                "--dropout", "0.4",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "40",
+                "--validation_split", "0.2",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "d,d,d",
+                "--loss", "LogL1",  
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--eval_model", "transfer_to_tza",
+                "--e5f_metric", "best_mape_avg",
+                "--dataset_dir", "datasets",
+                //"--population_target", "True"
+                "--name", "transfer_to_tza_evaled",
+                "--full_ceval", "False"
+            ]
+        },{
+            "name": "Transfer to ",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "uga,rwa,cod,nga,moz",
+                "-train_lvl", "f,f,f,f,f",
+                "-test", "uga,rwa,nga,moz,cod,tza",
+                "-lr", "0.000001",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "1600",
+                "--validation_split", "0.2",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m,m,d,d,m",
+                "--loss", "LogL1",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--dataset_dir", "datasets", 
+                "--name", "transfer_to_tza",
+                "--full_ceval", "False"
+            ]
+        },{
+            "name": "Transfer to  Evaled",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "rwa,tza",
+                "-train_lvl", "f,f,f,f,f",
+                "-test", "tza",
+                "-lr", "0.000001",
+                "-wr", "0.01",
+                //"--dropout", "0.4",
                 "-optim", "adam",
                 "-adamwr", "0",
                 "-lstep", "40",
@@ -1292,10 +1357,10 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,rwa",
+                "-train", "cod",
                 "-train_lvl", "f,f,f,f,f",
                 // "-test", "cod,moz,nga,uga,rwa,tza",
-                "-test", "tza,uga,rwa",
+                "-test", "cod",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
@@ -1311,39 +1376,9 @@
                 "--output_scaling", "True",
                 //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
                 "--e5f_metric", "best_mape_avg",
-                "--name", "transfer_LogL1_1613_Xallo",
+                "--name", "insert_name_v2",
                 "-e5f", "transfer_LogL1_1613_1allo,transfer_LogL1_1613_2allo,transfer_LogL1_1613_3allo,transfer_LogL1_1613_4allo,transfer_LogL1_1613_5allo",
-            ]
-        },
-        {
-            "name": "Runcomparison:Bughunt",
-            "type": "python",
-            "request": "launch",
-            "program": "superpixel_disagg_model.py",
-            "console": "integratedTerminal",
-            "env": {//"DISPLAY":":1",
-                "PYTHONPATH": "${workspaceRoot}",
-                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
-            "args": [ 
-                "-train", "uga,rwa",
-                "-train_lvl", "f,f,f,f,f",
-                "-test", "uga,rwa,tza",
-                "-lr", "0.0001",
-                "-optim", "adam",
-                "-wr", "0.01",
-                "-adamwr", "0.",
-                "-lstep", "200",
-                "--validation_fold", "0",
-                "-rs", "2",
-                "-mm", "m,m,d,d,d",
-                "--loss", "laplaceNLL",
-                "--input_scaling", "True",
-                "--output_scaling", "True",
-                //"--silent_mode", "True",
-                "--dataset_dir", "datasets",
-                "--grad_clip", "9999999",
-                
-            ]
+            ] 
         },
         {
             "name": "ScaleNet Standard Finescale",
