--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -303,14 +303,14 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [
                 "-train", "rwa",
-                "-train_lvl", "f",
+                "-train_lvl", "ac",
                 "-test", "rwa",
                 "-lr", "0.0001",
                 "-wr", "0.01",
                 "--dropout", "0.4",
                 "-optim", "adam",
                 "-adamwr", "0",
-                "-lstep", "200",
+                "-lstep", "50",
                 "--validation_fold", "0",
                 "-rs", "1610",
                 "-rsf", "1610",
