--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1451,5 +1451,75 @@
                 "--admin_augment", "False"
             ]
         },
+        {
+            "name": "ScaleNet Inference - Feature Importance",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "tza",
+                "-train_lvl", "f", 
+                "-test", "tza", 
+                "-lr", "0.0001", 
+                "-optim", "adam",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-adamwr", "0.", 
+                "-lstep", "800",
+                "--validation_fold", "4",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m",
+                "--loss", "LogL1",
+                "--input_scaling", "True", 
+                "--output_scaling", "True",
+                "--silent_mode", "True",
+                "--sampler", "custom", 
+                "--max_step", "150000", 
+                "-wandbu", "jvargas",
+                "--name", "LogL1_f_1610_X_tocc_aug1_rerun3",
+                "--e5f_metric", "best_r2",
+                "-e5f", "LogL1_f_1610_1_tocc_aug1,LogL1_f_1610_2_tocc_aug1,LogL1_f_1610_3_tocc_aug1,LogL1_f_1610_4_tocc_aug1,LogL1_f_1610_5_tocc_aug1",
+                "-efi", "5"
+            ]
+        },
+        {
+            "name": "ScaleNet removing features",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "tza",
+                "-train_lvl", "f", 
+                "-test", "tza", 
+                "-lr", "0.0001", 
+                "-optim", "adam",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-adamwr", "0.", 
+                "-lstep", "800",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "m",
+                "--loss", "LogL1",
+                "--input_scaling", "False", 
+                "--output_scaling", "False",
+                "--silent_mode", "True",
+                "--sampler", "custom", 
+                "--max_step", "150000", 
+                "-wandbu", "jvargas",
+                "--name", "LogL1_f_1610_0_rm1",
+                "-rmfi", "1"
+            ]
+        },
     ]
 }
