--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -137,7 +137,7 @@
             ]
         }, 
         {
-            "name": "Py: building_disagg_baseline.py Global Disag Transfer",
+            "name": "Py: building_disagg_baseline.py Global Disag Transfer to TZA",
             "type": "python",
             "request": "launch",
             "program": "building_disagg_baseline.py",
@@ -151,9 +151,31 @@
                 "--output_dir", "output_dir/",
                 //"P_2020",
                 // "--train_dataset_name", "cod,uga,nga,moz,rwa",
-                "--train_dataset_name", "uga,moz,rwa",
+                "--train_dataset_name", "uga,rwa,moz",
                 // "--train_dataset_name", "tza",
                 "--test_dataset_name", "tza",
+                "--global_disag"
+                //"--global_disag", "True"
+            ]
+        }, 
+        {
+            "name": "Py: building_disagg_baseline.py Global Disag Transfer to MOZ",
+            "type": "python",
+            "request": "launch",
+            "program": "building_disagg_baseline.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                // "preprocessed_data_3.pkl",
+                // "../../../data/OtherBuildings/TZA/tza_subnational_2000_2020_sid.tif",
+                "--output_dir", "output_dir/",
+                //"P_2020",
+                // "--train_dataset_name", "cod,uga,nga,moz,rwa",
+                "--train_dataset_name", "uga,rwa,tza",
+                // "--train_dataset_name", "tza",
+                "--test_dataset_name", "moz",
                 "--global_disag"
                 //"--global_disag", "True"
             ]
@@ -303,7 +325,7 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [
                 "-train", "rwa",
-                "-train_lvl", "ac",
+                "-train_lvl", "c",
                 "-test", "rwa",
                 "-lr", "0.0001",
                 "-wr", "0.01",
@@ -317,14 +339,14 @@
                 "-mm", "m", 
                 "--loss", "LogL1", 
                 "--kernel_size", "1,1,1,1",
-                "--admin_augment", "True",
+                // "--admin_augment", "True",
                 //"--population_target", "True",
                 "--input_scaling", "True",
                 "--output_scaling", "True", 
                 "--sampler", "custom",
                 "--max_step", "150000",
                 //"--population_target", "True"
-                "--name", "this-is-a-test-run-for-naming_2"
+                "--name", "this-is-a-test-for-rwa_adj"
             ]
         },{
             "name": "UGA_CV LogL1 kernel superpixel_disagg_model.py fold x",
@@ -395,6 +417,41 @@
                 "--max_step", "150000",
                 //"--population_target", "True"
                 "--name", "this-is-a-test-run-for-naming_2"
+            ]
+        },{
+            "name": "COD_CV LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "cod",
+                "-train_lvl", "f",
+                "-test", "cod",
+                "-lr", "0.0001",
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "d", 
+                "--loss", "LogL1", 
+                // "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "cod_test"
             ]
         },{
             "name": "TZA train_model_with_agg_data.py",
@@ -1408,14 +1465,47 @@
                 "-rs", "1611",
                 "-rsf", "1611",
                 "-mm", "d,d,d,d,d,d",
-                "--loss", "l1",
+                "--loss", "LogL1",
                 // "--loss", "laplaceNLL",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
                 //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
                 "--e5f_metric", "best_mape",
-                "--name", "l1_c_1611_X",
-                "-e5f", "l1_c_1611_1,l1_c_1611_2,l1_c_1611_3,l1_c_1611_4,l1_c_1611_5",
+                "--name", "LogL1_f_1610_Xal",
+                "-e5f", "LogL1_f_1610_1al,LogL1_f_1610_2al,LogL1_f_1610_3al,LogL1_f_1610_4al,LogL1_f_1610_5al",
+            ] 
+        },
+        {
+            "name": "Eval 5fold MOZ superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "moz",
+                "-train_lvl", "f,f,f,f,f",
+                // "-test", "cod,moz,nga,uga,rwa,tza",
+                "-test", "moz",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.3",
+                "--dropout", "0.4",
+                "-adamwr", "0.",
+                "-lstep", "800",
+                "-rs", "1611",
+                "-rsf", "1611",
+                "-mm", "d,d,d,d,d,d",
+                "--loss", "LogL1",
+                // "--loss", "laplaceNLL",
+                "--input_scaling", "True",
+                "--output_scaling", "True",
+                //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
+                "--e5f_metric", "best_mape",
+                "--name", "moz_f_1610_X",
+                "-e5f", "moz_f_1610_1,moz_f_1610_2,moz_f_1610_3,moz_f_1610_4,moz_f_1610_5",
             ] 
         },
         {
