--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -325,7 +325,7 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [
                 "-train", "rwa",
-                "-train_lvl", "c",
+                "-train_lvl", "f",
                 "-test", "rwa",
                 "-lr", "0.0001",
                 "-wr", "0.01",
